Fri May 22 21:13:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/intern.h (rb_sym_count): move `rb_sym_all_symbols`
	  to a symbol.c specific section.  a part of patch by Lourens
	  Naude.

Fri May 22 20:56:33 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* complex.c (f_complex_polar): simple bug reproduced only when y is
	  a float but x is not a float.

Fri May 22 19:42:06 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_spawn_process): do not discard global escape
	  status.  [ruby-core:69304] [Bug #11166]

	* process.c (rb_execarg_spawn): extract the start procedure in a
	  parent process with ensuring the end procedure.

Fri May 22 16:48:32 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* NEWS: added news for net-telnet and rake

Thu May 21 20:27:07 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in (RUBY_DTRACE_POSTPROCESS): cmp -b is GNU extension.
	  darwin uses GNU cmp, and FreeBSD and Solaris are not.
	  Note that accidentally equals to expected result.

Thu May 21 18:00:19 2015  Koichi Sasada  <ko1@atdot.net>

	* iseq.c: constify.

	* iseq.h: ditto.

	* method.h: ditto.

	* proc.c: ditto.

	* vm_method.c: ditto.

Thu May 21 17:44:53 2015  Koichi Sasada  <ko1@atdot.net>

	* proc.c: fix issues caused by binding created from Method#to_proc.
	  [Bug #11163]

	* vm.c (vm_cref_new_toplevel): export as rb_vm_cref_new_toplevel().

	* test/ruby/test_method.rb: add some assersions.

Thu May 21 17:29:26 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/matrix.rb: added documentation for Matrix#empty and Matrix#/
	  [Feature #10070][ruby-dev:48433] Patch by @gogotanaka

Thu May 21 17:02:43 2015  Koichi Sasada  <ko1@atdot.net>

	* proc.c: rename functions.
	  * method_get_def() -> method_def()
	  * method_get_iseq() -> method_def_iseq()
	  * method_get_cref() -> method_cref()

Thu May 21 16:52:44 2015  Koichi Sasada  <ko1@atdot.net>

	* proc.c (rb_method_get_iseq): rename to rb_method_iseq.

	* iseq.c: catch up this fix.
