@@ -1,3 +1,8 @@
+Fri May 22 22:36:14 2015  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
+
+	* lib/prime.rb: Remove obsolete Prime.new
+	  patch by Ajay Kumar. [Fixes GH-891]
+
 Fri May 22 21:13:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* include/ruby/intern.h (rb_sym_count): move `rb_sym_all_symbols`
